--- a/calendar_more.html
+++ b/calendar_more.html
@@ -128,32 +128,36 @@
                 <div class="news_continer">
                     <div class="event_more_title">2018台北寵物用品展</div>
                     <div class="ticket_poster">
-                        <div class="ticket_date">
-                            <div class="poster_pic"><img src="images/2018last.jpg"></div>
-                        </div>
-                        <div class="ticket_date">
-                            <div class="eventpost_title">展覽活動期間：</div>
-                            <div class="news_article">2018.07.06 - 2018.07.09</div>
-                            <div class="eventpost_title">展覽活動地點：</div>
-                            <div class="news_article">一樓展場</div>
-                            <div class="eventpost_title">展覽主辦單位：</div>
-                            <div class="news_article">展昭國際企業股份有限公司</div>
-
-                            <a href="#">
-                            <div class="eventpost_btn"><i class="mdi mdi-link-variant"></i>前往官網</div>
-                            </a>
-                        </div>
-
+                        <table width="100%" border="0">
+                          <tr>
+                            <td width="70%"><img src="images/2018last.jpg"></td>
+                            <td width="30%">
+                                <div class="eventpost_title">展覽活動期間：</div>
+                                <div class="news_article">2018.07.06 - 2018.07.09</div>
+                                <div class="eventpost_title">展覽活動地點：</div>
+                                <div class="news_article">一樓展場</div>
+                                <div class="eventpost_title">展覽主辦單位：</div>
+                                <div class="news_article">展昭國際企業股份有限公司</div>
+                                <a href="#">
+                                <div class="eventpost_btn"><i class="mdi mdi-link-variant"></i>前往官網</div>
+                                </a>
+                            </td>
+                          </tr>
+                        </table>
                     </div>
                     <div class="mod-organizer_title">票價：</div>
                     <div class="expo_table">
                         <div class="ticket_price">
-                            <div class="price_bg">VIP區 NT$4,880</div>
-                            <div class="price_bg">A區 NT$3,880</div>
-                            <div class="price_bg">B區 NT$2,880</div>
-                            <div class="price_bg">C區 NT$1,880</div>
-                            <div class="price_bg">身障席 NT$1,440</div>
-                            <div class="price_bg">全區皆為座席</div>
+                            <table width="100%" border="0">
+                              <tr>
+                                <td>VIP區 NT$4,880</td>
+                                <td>A區 NT$3,880</td>
+                                <td>B區 NT$2,880</td>
+                                <td>C區 NT$1,880</td>
+                                <td>身障席 NT$1,440</td>
+                                <td>全區皆為座席</td>
+                              </tr>
+                            </table>
                         </div>
                     </div>
                     <div class="news_article">德億企業（股）公司</div>
