--- a/visitors6.html
+++ b/visitors6.html
@@ -29,8 +29,8 @@
                             <div class="listitem">
                                 <ul>
                                     <a href="news.html">
-                                    <li><img src="images/icon01.svg"></li>
-                                    <li>最新消息</li>
+                                        <li><img src="images/icon01.svg"></li>
+                                        <li>最新消息</li>
                                     </a>
                                 </ul>
                             </div>
@@ -38,8 +38,8 @@
                             <div class="listitem">
                                 <ul>
                                     <a href="aboutus.html">
-                                    <li><img src="images/icon02.svg"></li>
-                                    <li>展館介紹</li>
+                                        <li><img src="images/icon02.svg"></li>
+                                        <li>展館介紹</li>
                                     </a>
                                 </ul>
                             </div>
@@ -47,8 +47,8 @@
                             <div class="listitem">
                                 <ul>
                                     <a href="organizers.html">
-                                    <li><img src="images/icon03.svg"></li>
-                                    <li>租借場地</li>
+                                        <li><img src="images/icon03.svg"></li>
+                                        <li>租借場地</li>
                                     </a>
                                 </ul>
                             </div>
@@ -56,8 +56,8 @@
                             <div class="listitem">
                                 <ul>
                                     <a href="calendar.html">
-                                    <li><img src="images/icon04.svg"></li>
-                                    <li>展會活動</li>
+                                        <li><img src="images/icon04.svg"></li>
+                                        <li>展會活動</li>
                                     </a>
                                 </ul>
                             </div>
@@ -65,8 +65,8 @@
                             <div class="listitem">
                                 <ul>
                                     <a href="visitors2.html">
-                                    <li><img src="images/icon05.svg"></li>
-                                    <li>參觀資訊</li>
+                                        <li><img src="images/icon05.svg"></li>
+                                        <li>參觀資訊</li>
                                     </a>
                                 </ul>
                             </div>
@@ -74,8 +74,8 @@
                             <div class="listitem">
                                 <ul>
                                     <a href="transportation1.html">
-                                    <li><img src="images/icon06.svg"></li>
-                                    <li>交通資訊</li>
+                                        <li><img src="images/icon06.svg"></li>
+                                        <li>交通資訊</li>
                                     </a>
                                 </ul>
                             </div>
@@ -83,8 +83,8 @@
                             <div class="listitem">
                                 <ul>
                                     <a href="sitemap.html">
-                                    <li><img src="images/icon07.svg"></li>
-                                    <li>全站導覽</li>
+                                        <li><img src="images/icon07.svg"></li>
+                                        <li>全站導覽</li>
                                     </a>
                                 </ul>
                             </div>
@@ -92,8 +92,8 @@
                             <div class="listitem">
                                 <ul>
                                     <a href="#">
-                                    <li><img src="images/icon08.svg"></li>
-                                    <li>選擇語系</li>
+                                        <li><img src="images/icon08.svg"></li>
+                                        <li>選擇語系</li>
                                     </a>
                                 </ul>
                             </div>
@@ -130,27 +130,36 @@
                 <div class="orang_tab">
                     <ul>
                         <!-- <a href="transportation1.html"><li>交通資訊</li></a> -->
-                        <a href="visitors2.html"><li>平面位置</li></a>
-                        <a href="visitors3.html"><li>公共設施</li></a>
+                        <a href="visitors2.html">
+                            <li>平面位置</li>
+                        </a>
+                        <a href="visitors3.html">
+                            <li>公共設施</li>
+                        </a>
                         <!-- <a href="visitors4.html"><li>Free Wi-Fi</li></a> -->
-                        <a href="food.html"><li>餐飲服務</li></a>
+                        <a href="food.html">
+                            <li>餐飲服務</li>
+                        </a>
                         <!-- <a href="organizers_item6.html"><li>展覽申請</li></a> -->
-                        <a href="visitors6.html"><li class="active">住宿資訊</li></a>
-                        <a href="visitors7.html"><li>外幣兌換與快遞服務</li></a>
+                        <a href="visitors6.html">
+                            <li class="active">住宿資訊</li>
+                        </a>
+                        <a href="visitors7.html">
+                            <li>外幣兌換與快遞服務</li>
+                        </a>
                         <!-- <a href="visitors8.html"><li>免費行動數位閱讀</li></a> -->
                     </ul>
                 </div>
                 <div class="mod-organizer_title">南港展覽館2館臨近捷運南港展覽館站，交通方便臨近各大高品質飯店。</div>
-                <iframe allowfullscreen="" frameborder="0" height="450" src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d14457.448688882338!2d121.608599!3d25.055711!3m2!1i1024!2i768!4f13.1!2m1!1z6aOv5bqX!5e0!3m2!1szh-TW!2stw!4v1456025408804" style="border:0" width="100%"></iframe>
-
-
-
+                <iframe allowfullscreen="" frameborder="0" height="450" src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d14457.448688882338!2d121.608599!3d25.055711!3m2!1i1024!2i768!4f13.1!2m1!1z6aOv5bqX!5e0!3m2!1szh-TW!2stw!4v1456025408804" style="border:0"
+                    width="100%">
+                </iframe>
             </div>
 
         </article>
 
 
-        <<footer id="id_footer">
+        <footer id="id_footer">
             <div class="footer_continer">
                 <div class="row_cop">
                     <div class="copy">
@@ -196,15 +205,15 @@
                     </div>
                 </div>
                 <div class="footer_faq">
-            <ul>
-                <li><a href="faq1.html">常見問題</a></li>
-                <li>｜</li>
-                <li><a href="links.html">相關連結</a></li>
-            </ul>
-        </div>
-        <div class="copyright"> 台北南港展覽館2館 Copyright © 2018 Taipei Nangang Exhibition Center, Hall 2. All Rights Reserved. </div>
+                    <ul>
+                        <li><a href="faq1.html">常見問題</a></li>
+                        <li>｜</li>
+                        <li><a href="links.html">相關連結</a></li>
+                    </ul>
+                </div>
+                <div class="copyright"> 台北南港展覽館2館 Copyright © 2018 Taipei Nangang Exhibition Center, Hall 2. All Rights Reserved. </div>
             </div>
-        </footer>
+            </footer>
     </div>
 
 </body>
