--- a/faq1.html
+++ b/faq1.html
@@ -130,7 +130,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q1.到南港2館須由高速公路哪個出口下?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -144,7 +144,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q2.南港2館汽車停車場出入口在哪?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -159,7 +159,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q3.南港2館停車場開放時間。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -174,7 +174,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q4.南港2館停車場小客車計費說明。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -188,7 +188,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q5.南港2館地下停車場限高是多少?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -202,7 +202,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q6.南港2館車道載重?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -216,7 +216,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q7.南港2館計程車在哪搭乘?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -230,7 +230,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q8.貨車在南港2館是否有臨停空間?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -244,7 +244,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">限制</div></td>
+                            <td class="fq_wid"><div class="faqtab">限制</div></td>
                             <td width="79%"><div class="faq_quation">Q9.進出場貨車如何進出南港2館，有否限制？</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -259,7 +259,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">限制</div></td>
+                            <td class="fq_wid"><div class="faqtab">限制</div></td>
                             <td width="79%"><div class="faq_quation">Q10.南港2館貨車斜坡道載重限制。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -274,7 +274,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">限制</div></td>
+                            <td class="fq_wid"><div class="faqtab">限制</div></td>
                             <td width="79%"><div class="faq_quation">Q11.南港2館貨車斜坡道限高。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -289,7 +289,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">資訊</div></td>
+                            <td class="fq_wid"><div class="faqtab">資訊</div></td>
                             <td width="79%"><div class="faq_quation">Q12.南港2館特色?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -304,7 +304,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">資訊</div></td>
+                            <td class="fq_wid"><div class="faqtab">資訊</div></td>
                             <td width="79%"><div class="faq_quation">Q13.南港2館有外幣兌換服務?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -319,7 +319,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">展場</div></td>
+                            <td class="fq_wid"><div class="faqtab">展場</div></td>
                             <td width="79%"><div class="faq_quation">Q14.南港2館展覽場地攤位限高?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -334,7 +334,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">展場</div></td>
+                            <td class="fq_wid"><div class="faqtab">展場</div></td>
                             <td width="79%"><div class="faq_quation">Q15.南港2館辦理活動能否於展場內使用明火？</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -348,7 +348,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">展場</div></td>
+                            <td class="fq_wid"><div class="faqtab">展場</div></td>
                             <td width="79%"><div class="faq_quation">Q16.南港2館展場樓板載重限制？</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -363,7 +363,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">會議室</div></td>
+                            <td class="fq_wid"><div class="faqtab">會議室</div></td>
                             <td width="79%"><div class="faq_quation">Q17.南港2館7樓多功能會議中心樓板載重限制？</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -377,7 +377,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">參展</div></td>
+                            <td class="fq_wid"><div class="faqtab">參展</div></td>
                             <td width="79%"><div class="faq_quation">Q18.南港2舘參展商如何租用攤位臨時有線電話。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -392,7 +392,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">參展</div></td>
+                            <td class="fq_wid"><div class="faqtab">參展</div></td>
                             <td width="79%"><div class="faq_quation">Q19.南港2舘參展商如何租用攤位臨時ADSL網路。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -406,7 +406,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">參展</div></td>
+                            <td class="fq_wid"><div class="faqtab">參展</div></td>
                             <td width="79%"><div class="faq_quation">Q20.南港2舘參展商如何申請攤位水電。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -420,7 +420,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q21.南港2館是否有主辦單位辦公室?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -435,7 +435,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q22.南港2館有無線Wi-Fi?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -449,7 +449,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q23.南港2館7樓多功能會議中心提供那些用電規格之電源。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -464,7 +464,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q24.請問南港2館是否有提供免費無線網路。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -479,7 +479,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q25.如何搭捷運至南港2館?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -494,7 +494,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q26.如何從桃園機場搭國道客運至南港2館?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -509,7 +509,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">資訊</div></td>
+                            <td class="fq_wid"><div class="faqtab">資訊</div></td>
                             <td width="79%"><div class="faq_quation">Q27.南港2館有ATM提款機?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -524,7 +524,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q28.南港2館有回教祈禱室?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -539,7 +539,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q29.南港2館是否有提供哺(集)乳室，位於哪裡。</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -554,7 +554,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q30.南港2館餐廳、商店街營業時間?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -569,7 +569,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q31.南港2館用餐空間?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -584,7 +584,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">交通</div></td>
+                            <td class="fq_wid"><div class="faqtab">交通</div></td>
                             <td width="79%"><div class="faq_quation">Q32.南港2館附近的公車站牌?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
@@ -599,7 +599,7 @@
                     <div class="news_faq_title">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="15%"><div class="faqtab">服務</div></td>
+                            <td class="fq_wid"><div class="faqtab">服務</div></td>
                             <td width="79%"><div class="faq_quation">Q33.南港2館有哪些服務樓層?</div></td>
                             <td width="6%"><div class="faq_down"><i class="mdi  mdi-chevron-down"></i></div></td>
                           </tr>
