index motifly link hall 2

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     <li><a href="organizers_booking_calendar.html"><i class="mdi mdi-chevron-right"></i>空檔查詢</a></li>
                                     <li><a href="organizers_item6.html"><i class="mdi mdi-chevron-right"></i>展覽申請</a></li>
                                     <li><a href="organizers_item7.html"><i class="mdi mdi-chevron-right"></i>活動申請</a></li>
-                                    <li><a href="hall2.html"><i class="mdi mdi-chevron-right"></i>南港1館</a></li>
+                                    <li><a href="http://www.twtcnangang.com.tw/zh-tw/"><i class="mdi mdi-chevron-right"></i>南港1館</a></li>
                                     <li><a href="organizers_item5.html"><i class="mdi mdi-chevron-right"></i>交通及停車場</a></li>
                                 </ul>
                             </div>
