--- a/index.html
+++ b/index.html
@@ -162,6 +162,118 @@
                     </div>
                 </div>
             </div> -->
+            <div class="mobile_darkbg">
+                <div class="mobile_darkbg_wrap">
+                    <div class="mob_box"></div>
+                    <div class="mobile_darkbg_box">
+                        <div class="site_title">最新消息</div>
+                        <ul>
+                            <li><a href="news.html">新聞</a></li>
+                            <li><a href="news.html">公告</a></li>
+                        </ul>
+                    </div>
+                    <div class="mobile_darkbg_box">
+                        <div class="site_title">展館介紹</div>
+                        <ul>
+                            <li><a href="aboutus.html">內部實景</a></li>
+                            <li><a href="aboutus2.html">展館位置</a></li>
+                            <li><a href="aboutus3.html">關於展館</a></li>
+                            <li><a href="aboutus6.html">認證標章</a></li>
+                            <li><a href="aboutus7.html">經營者</a></li>
+                            <li><a href="aboutus8.html">展館剪影</a></li>
+                            <li><a href="aboutus9.html">聯絡我們</a></li>
+                        </ul>
+                    </div>
+                    <div class="mobile_darkbg_box">
+                        <div class="site_title">租借場地</div>
+                        <ul>
+                            <li><a href="organizers_item1.html"><i class="mdi  mdi-chevron-down"></i>展覽會場</a></li>
+                            <li class="site_smfont"><a href="organizers_item1.html"><i class="mdi mdi-chevron-right"></i>基本資訊 </a></li>
+                            <li class="site_smfont"><a href="organizers_item2.html"><i class="mdi mdi-chevron-right"></i>一樓展場</a></li>
+                            <li class="site_smfont"><a href="organizers_item3.html"><i class="mdi mdi-chevron-right"></i>四樓展場</a></li>
+                            <li class="site_smfont"><a href="organizers_item4.html"><i class="mdi mdi-chevron-right"></i>內部實景</a></li>
+                            <li class="site_smfont"><a href="organizers_booking_calendar.html"><i class="mdi mdi-chevron-right"></i>空檔查詢</a></li>
+                            <li class="site_smfont"><a href="organizers_item6.html"><i class="mdi mdi-chevron-right"></i>展覽申請</a></li>
+                            <li class="site_smfont"><a href="organizers_item7.html"><i class="mdi mdi-chevron-right"></i>活動申請</a></li>
+                            <li class="site_smfont"><a href="hall2.html"><i class="mdi mdi-chevron-right"></i>南港1館</a></li>
+                            <li class="site_smfont"><a href="organizers_item5.html"><i class="mdi mdi-chevron-right"></i>交通及停車場</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="conference-room.html"><i class="mdi  mdi-chevron-down"></i>會議室</a></li>
+                            <li class="site_smfont"><a href="conference-room.html"><i class="mdi mdi-chevron-right"></i>會議室介紹</a></li>
+                            <li class="site_smfont"><a href="conference-room_item2.html"><i class="mdi mdi-chevron-right"></i>會議活動剪影</a></li>
+                            <li class="site_smfont"><a href="conference-room_item3.html"><i class="mdi mdi-chevron-right"></i>會議室空檔查詢</a></li>
+                            <li class="site_smfont"><a href="conference-room_item4.html"><i class="mdi mdi-chevron-right"></i>會議室申請流程</a></li>
+                            <li class="site_smfont"><a href="conference-room_item5.html"><i class="mdi mdi-chevron-right"></i>場租試算</a></li>
+                            <li class="site_smfont"><a href="conference-room_item6.html"><i class="mdi mdi-chevron-right"></i>貴賓室</a></li>
+                            <li class="site_smfont"><a href="conference-room_item7.html"><i class="mdi mdi-chevron-right"></i>其他服務</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="public_space.html"><i class="mdi  mdi-chevron-down"></i>公共空間</a></li>
+                            <li class="site_smfont"><a href="public_space.html"><i class="mdi mdi-chevron-right"></i>洽詢公共空間</a></li>
+                            <li class="site_smfont"><a href="public_space2.html"><i class="mdi mdi-chevron-right"></i>收費基準</a></li>
+                            <li class="site_smfont"><a href="public_space3.html"><i class="mdi mdi-chevron-right"></i>公共空間一覽</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="advertisements_ad.html"><i class="mdi  mdi-chevron-down"></i>廣告刊登</a></li>
+                            <li class="site_smfont"><a href="advertisements_ad.html"><i class="mdi mdi-chevron-right"></i>廣告點位</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="food.html">餐飲服務</a></li>
+                            <li><a href="safety_management.html">安全管理</a></li>
+                            <li><a href="telecommunications.html">電信服務</a></li>
+                            <li><a href="http://www.twtcnangang.com.tw/file/13/8/%E5%A4%96%E8%B2%BF%E5%8D%94%E6%9C%83%E6%8E%A8%E8%96%A6%E6%B0%B4%E9%9B%BB%E8%A3%9D%E6%BD%A2%E5%95%86%E8%81%AF%E7%B5%A1%E8%B3%87%E6%96%99.pdf">水電服務</a></li>
+                        </ul>
+                    </div>
+                    <div class="mobile_darkbg_box">
+                        <div class="site_title">展會活動</div>
+                        <ul>
+                            <li><a href="calendar.html">展覽</a></li>
+                            <li><a href="calendar.html">會議及活動</a></li>
+                        </ul>
+                    </div>
+                    <div class="mobile_darkbg_box">
+                        <div class="site_title">參觀資訊</div>
+                        <ul>
+                            <!-- <li><a href="transportation1.html">交通資訊</a></li> -->
+                            <li><a href="visitors2.html">平面位置</a></li>
+                            <li><a href="visitors3.html">公共設施</a></li>
+                            <li><a href="food.html">餐飲服務</a></li>
+                            <!-- <li><a href="organizers_item6.html">展覽申請</a></li> -->
+                            <li><a href="visitors6.html">住宿資訊</a></li>
+                            <li><a href="visitors7.html">外幣兌換與快遞服務</a></li>
+                        </ul>
+                    </div>
+                    <div class="mobile_darkbg_box">
+                        <div class="site_title">交通資訊</div>
+                        <ul>
+                            <li><a href="transportation1.html">停車場</a></li>
+                            <li><a href="transportation2.html">自行開車</a></li>
+                            <li><a href="transportation3.html">捷運路線</a></li>
+                            <li><a href="transportation4.html">公車路線</a></li>
+                            <li><a href="transportation5.html">高鐵路線</a></li>
+                            <li><a href="transportation6.html">Ubike</a></li>
+                            <li><a href="transportation7.html">國道客運</a></li>
+                            <li><a href="transportation8.html">尋車導引系統</a></li>
+                        </ul>
+                    </div>
+                    <div class="mobile_darkbg_box">
+                        <div class="site_title">常見問題</div>
+                        <ul>
+                            <li><a href="faq1.html">常見問題</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="mobile_darkbg_box">
+                        <div class="site_title">相關連結</div>
+                        <ul>
+                            <li><a href="links.html">相關連結</a></li>
+
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
 
         </header>
 
