--- a/sitemap.html
+++ b/sitemap.html
@@ -159,7 +159,7 @@
                             <li class="site_smfont"><a href="organizers_booking_calendar.html"><i class="mdi mdi-chevron-right"></i>空檔查詢</a></li>
                             <li class="site_smfont"><a href="organizers_item6.html"><i class="mdi mdi-chevron-right"></i>展覽申請</a></li>
                             <li class="site_smfont"><a href="organizers_item7.html"><i class="mdi mdi-chevron-right"></i>活動申請</a></li>
-                            <li class="site_smfont"><a href="hall2.html"><i class="mdi mdi-chevron-right"></i>南港1館</a></li>
+                            <li class="site_smfont"><a href="http://www.twtcnangang.com.tw/zh-tw/"><i class="mdi mdi-chevron-right"></i>南港1館</a></li>
                             <li class="site_smfont"><a href="organizers_item5.html"><i class="mdi mdi-chevron-right"></i>交通及停車場</a></li>
                         </ul>
                         <ul>
