--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <div class="rent_wrapper">
                     <div class="rent_bluebg">
                         <div class="tagenol_bgline"><img src="images/rentbg.svg"></div>
-                        <div class="oranizers">ORGANIZERS</div>
+                        <!-- <div class="oranizers">ORGANIZERS</div> -->
                     </div>
                     <div class="rent_linehouse"><img src="images/linetwt.svg"></div>
                     <div class="rent_continer">
