--- a/links.html
+++ b/links.html
@@ -128,75 +128,75 @@
             <div class="orang_wrapper">
                 <div class="link_box">
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://www.taitra.org.tw/%E6%8B%9B%E8%80%83%E8%A8%8A%E6%81%AF"><img src="images/5aa2293aab62e.jpg"></a></div>
+                        <div class="link_pic"><a href="http://www.taitra.org.tw/%E6%8B%9B%E8%80%83%E8%A8%8A%E6%81%AF" target="_blank"><img src="images/5aa2293aab62e.jpg"></a></div>
                         <div class="link_font">2018 外貿協會新進人員招考 </div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://2018floraexpo.tw/"><img src="images/5a52cfcbd979d.png"></a></div>
+                        <div class="link_pic"><a href="http://2018floraexpo.tw/" target="_blank"><img src="images/5a52cfcbd979d.png"></a></div>
                         <div class="link_font">2018臺中世界花卉博覽會</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="https://www.youtube.com/watch?v=KFb3aQolSuw"><img src="images/5a03c3816c041.png"></a></div>
+                        <div class="link_pic"><a href="https://www.youtube.com/watch?v=KFb3aQolSuw" target="_blank"><img src="images/5a03c3816c041.png"></a></div>
                         <div class="link_font">出口拓銷資源簡介</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="https://www.youtube.com/channel/UCdSWvaJ3Wva-A6G5wLD0HRQ"><img src="images/56e2755ec0ce3.jpg"></a></div>
+                        <div class="link_pic"><a href="https://www.youtube.com/channel/UCdSWvaJ3Wva-A6G5wLD0HRQ" target="_blank"><img src="images/56e2755ec0ce3.jpg"></a></div>
                         <div class="link_font">外貿協會 (TAITRA) YouTube頻道</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://expert.taiwantrade.com.tw/"><img src="images/56cc2dd4a3e00.jpg"></a></div>
+                        <div class="link_pic"><a href="http://expert.taiwantrade.com.tw/" target="_blank"><img src="images/56cc2dd4a3e00.jpg"></a></div>
                         <div class="link_font">線上貿易諮詢服務</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="https://www.taiwan.net.tw/"><img src="images/56ca86727d92d.gif"></a></div>
+                        <div class="link_pic"><a href="https://www.taiwan.net.tw/" target="_blank"><img src="images/56ca86727d92d.gif"></a></div>
                         <div class="link_font">中華民國交通部觀光局</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="https://www.taiwantradeshows.com.tw/"><img src="images/56ca83871d817.jpg"></a></div>
+                        <div class="link_pic"><a href="https://www.taiwantradeshows.com.tw/" target="_blank"><img src="images/56ca83871d817.jpg"></a></div>
                         <div class="link_font">台灣國際專業展</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="https://www.119.gov.taipei/home.php?id=4"><img src="images/56c97b76f2858.jpg"></a></div>
+                        <div class="link_pic"><a href="https://www.119.gov.taipei/home.php?id=4" target="_blank"><img src="images/56c97b76f2858.jpg"></a></div>
                         <div class="link_font">消防局宣導教育</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://www.5284.com.tw/"><img src="images/56c43f1bc0cc1.jpg"></a></div>
+                        <div class="link_pic"><a href="http://www.5284.com.tw/" target="_blank"><img src="images/56c43f1bc0cc1.jpg"></a></div>
                         <div class="link_font">台北市公車動態系統</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://www.nksp.com.tw/"><img src="images/56c43eb6a912a.gif"></a></div>
+                        <div class="link_pic"><a href="http://www.nksp.com.tw/" target="_blank"><img src="images/56c43eb6a912a.gif"></a></div>
                         <div class="link_font">南港軟體園區</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="https://www.taitraesource.com/"><img src="images/56c97b276265e.jpg"></a></div>
+                        <div class="link_pic"><a href="https://www.taitraesource.com/" target="_blank"><img src="images/56c97b276265e.jpg"></a></div>
                         <div class="link_font">貿協全球資訊網</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://www.ticc.com.tw/main_ch/index.aspx"><img src="images/56c43d7f40f26.jpg"></a></div>
+                        <div class="link_pic"><a href="https://www.trademag.org.tw/" target="_blank"><img src="images/56c43d7f40f26.jpg"></a></div>
                         <div class="link_font">國際商情雙週刊</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://info.taiwantrade.com.tw/"><img src="images/56c97958471cc.gif"></a></div>
+                        <div class="link_pic"><a href="http://info.taiwantrade.com.tw/" target="_blank"><img src="images/56c97958471cc.gif"></a></div>
                         <div class="link_font">台灣經貿網</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="https://www.meettaiwan.com/zh_TW/index.html"><img src="images/56c43b049f80e.gif"></a></div>
+                        <div class="link_pic"><a href="https://www.meettaiwan.com/zh_TW/index.html" target="_blank"><img src="images/56c43b049f80e.gif"></a></div>
                         <div class="link_font">台灣會展網</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://www.taitra.org.tw/"><img src="images/56c97ab548d07.gif"></a></div>
+                        <div class="link_pic"><a href="http://www.taitra.org.tw/" target="_blank"><img src="images/56c97ab548d07.gif"></a></div>
                         <div class="link_font">中華民國對外貿易發展協會</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://www.ticc.com.tw/main_ch/index.aspx"><img src="images/56c97839e9edb.gif"></a></div>
+                        <div class="link_pic"><a href="http://www.ticc.com.tw/main_ch/index.aspx" target="_blank"><img src="images/56c97839e9edb.gif"></a></div>
                         <div class="link_font">台北國際會議中心</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://www.twtc.com.tw/"><img src="images/56c439cb999d3.jpg"></a></div>
+                        <div class="link_pic"><a href="http://www.twtc.com.tw/" target="_blank"><img src="images/56c439cb999d3.jpg"></a></div>
                         <div class="link_font">世貿一館</div>
                     </div>
                     <div class="link_wrap">
-                        <div class="link_pic"><a href="http://www.twtc.org.tw/"><img src="images/56c97801cc9b8.jpg"></a></div>
+                        <div class="link_pic"><a href="http://www.twtc.org.tw/" target="_blank"><img src="images/56c97801cc9b8.jpg"></a></div>
                         <div class="link_font">展覽中心</div>
                     </div>
 
